--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,2 +1,37 @@
-<h1>Books#index</h1>
-<p>Find me in app/views/books/index.html.erb</p>
+<h1>Books</h1>
+
+<table>
+  <thead>
+    <tr>
+      <th>Title</th>
+      <th>Body</th>
+      <th></th>
+    </tr>
+  </thead>
+  <tbody>
+    <% @books.each do |book| %>
+     <tr>
+       <td><%= book.title %></td>
+       <td><%= book.body %></td>
+       <td><%= link_to 'Show', book %></td>
+       <td><%= link_to 'Edit', edit_book_path(@book.id) %></td>
+       <td><%= link_to 'Destroy', destroy_book_path(@book.id), method: :delete, "data-confirm" => "Are you sure？" %></td>
+     </tr>
+    <% end %>
+  </tbody>
+
+</table>
+
+<h3>New book</h3>
+<%= form_with model: Book.new do |f| %>
+
+ <h4>Title</h4>
+ <%= f.text_field :title %>
+
+ <h4>Body</h4>
+ <%= f.text_area :body %>
+
+ <br><%= f.submit 'Create Book' %></br>
+<% end %>
+
+
