--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -2,12 +2,11 @@
    ようこそ
    <strong>Bookers</strong>
    へ！
-   </h1>
+ </h1>
     <p>
       <strong>Bookers</strong>
        では、さまざまな書籍に関するあなたの意見や
     </p>
     <p>印象を共有し交換することができます</p>
-    <p>
-      <a href="/books">start</a>
-    </p>
+
+    <br><%= link_to "start", "/books" %><br>
