--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -13,9 +13,9 @@
      <tr>
        <td><%= book.title %></td>
        <td><%= book.body %></td>
-       <td><%= link_to 'Show', book_path(@book.id) %></td>
-       <td><%= link_to 'Edit', edit_book_path(@book.id) %></td>
-       <td><%= link_to 'Destroy', destroy_book_path(@book.id), method: :delete, "data-confirm" => "Are you sure？" %></td>
+       <td><%= link_to 'Show', book_path(book.id) %></td>
+       <td><%= link_to 'Edit', edit_book_path(book.id) %></td>
+       <td><%= link_to 'Destroy', destroy_book_path(book.id), method: :delete, "data-confirm" => "Are you sure？" %></td>
      </tr>
     <% end %>
   </tbody>
@@ -23,12 +23,12 @@
 </table>
 
 <h3>New book</h3>
-<%= form_with model: Book.new do |f| %>
+<%= form_with model: @book, url: '/books', method: :post do |f| %>
 
- <h4>Title</h4>
+ <%= f.label :title %><br>
  <%= f.text_field :title %>
 
- <h4>Body</h4>
+ <%= f.label :body %><br>
  <%= f.text_area :body %>
 
  <br><%= f.submit 'Create Book' %></br>
