--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,4 +1,3 @@
-<strong>Title:</strong>
-  <p><%= @book.title %></p>
-<strong>Body:</strong>
-  <p><%= @book.body %></p>
+<strong>Title:</strong><%= @book.title %>
+<br>
+<strong>Body:</strong><%= @book.body %>
