--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -15,7 +15,7 @@
        <td><%= book.body %></td>
        <td><%= link_to 'Show', book_path(book.id) %></td>
        <td><%= link_to 'Edit', edit_book_path(book.id) %></td>
-       <td><%= link_to 'Destroy', destroy_book_path(book.id), method: :delete, "data-confirm" => "Are you sure？" %></td>
+       <td><%= link_to 'Destroy', @book, method: :delete, "data-confirm" => "Are you sure？" %></td>
      </tr>
     <% end %>
   </tbody>
@@ -25,10 +25,10 @@
 <h3>New book</h3>
 <%= form_with model: @book, url: '/books', method: :post do |f| %>
 
- <%= f.label :title %><br>
+ <%= f.label :title %><br/>
  <%= f.text_field :title %>
 
- <%= f.label :body %><br>
+ <h4>Body</h4>
  <%= f.text_area :body %>
 
  <br><%= f.submit 'Create Book' %></br>
