--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,3 +1,5 @@
-<strong>Title:</strong><%= @book.title %>
-<br>
-<strong>Body:</strong><%= @book.body %>
+
+<p><span>Title:</span><%= @book.title %></p>
+<p><span>Body:</span><%= @book.body %></p>
+
+<br><%= link_to 'Edit', edit_book_path(@book) %> | <%= link_to 'Back', '/books' %>
