--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,3 +1,4 @@
+
 <h1>Books</h1>
 
 <table>
@@ -15,7 +16,7 @@
        <td><%= book.body %></td>
        <td><%= link_to 'Show', book_path(book.id) %></td>
        <td><%= link_to 'Edit', edit_book_path(book.id) %></td>
-       <td><%= link_to 'Destroy', @book, method: :delete, "data-confirm" => "Are you sure？" %></td>
+       <td><%= link_to 'Destroy', book_path(book[:id]), method: :delete, "data-confirm" => "Are you sure？" %></td>
      </tr>
     <% end %>
   </tbody>
@@ -25,7 +26,7 @@
 <h3>New book</h3>
 <%= form_with model: @book, url: '/books', method: :post do |f| %>
 
- <%= f.label :title %><br/>
+ <h4>Title</h4>
  <%= f.text_field :title %>
 
  <h4>Body</h4>
