--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,3 +1,6 @@
+<% if flash[:notice] %>
+ <p><%= flash[:notice] %></p>
+<% end %>
 
 <h1>Books</h1>
 
@@ -24,6 +27,7 @@
 </table>
 
 <h3>New book</h3>
+
 <%= form_with model: @book, url: '/books', method: :post do |f| %>
 
  <h4>Title</h4>
