--- a/app/assets/stylesheets/books.scss
+++ b/app/assets/stylesheets/books.scss
@@ -1,3 +1,23 @@
 // Place all the styles related to the books controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+
+td {
+  padding: 5px;
+}
+
+.message {
+  color: green;
+}
+
+.field {
+  margin-bottom: 10px;
+}
+
+.link {
+  display: flex;
+}
+
+span {
+  font-weight: bold;
+}
