--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,6 +1,8 @@
-<% if flash[:notice] %>
+<div class="message">
+ <% if flash[:notice] %>
  <p><%= flash[:notice] %></p>
 <% end %>
+</div>
 
 <h1>Books</h1>
 
@@ -38,12 +40,15 @@
 <% end %>
 
 <%= form_with model: @book, url: '/books', method: :post do |f| %>
-
+ <div class="field">
  <h4>Title</h4>
  <%= f.text_field :title %>
+ </div>
 
+ <div class="field">
  <h4>Body</h4>
  <%= f.text_area :body %>
+ </div>
 
  <br><%= f.submit 'Create Book' %></br>
 <% end %>
